<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.intellicube.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.intellicube.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.intellicube.ui.slideshow.PerfilFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_ayuda"
        android:name="com.example.intellicube.AyudaFragment"
        android:label="fragment_ayuda"
        tools:layout="@layout/fragment_ayuda" />
    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.example.intellicube.ConfiguracionFragment"
        android:label="fragment_configuracion"
        tools:layout="@layout/fragment_configuracion" />
</navigation>